--- a/synopsis/refs.bib
+++ b/synopsis/refs.bib
@@ -387,3 +387,329 @@
 	year={2009},
 	publisher={ACM New York, NY, USA}
 }
+
+
+
+
+
+@IEEEtranBSTCTL{IEEEexample:BSTcontrol,
+	CTLuse_forced_etal       = "yes",
+	CTLmax_names_forced_etal = "3",
+	CTLnames_show_etal       = "3" 
+}
+
+@inproceedings{Zhang2015,
+	author = {Zhang, Qian and Wang, Ting and Tian, Ye and Yuan, Feng and Xu, Qiang},
+	title = {ApproxANN: An Approximate Computing Framework for Artificial Neural Network},
+	booktitle = {Proceedings of the Design, Automation Test in Europe Conference Exhibition (DATE)},
+	year = {2015},
+	isbn = {978-3-9815370-4-8},
+	location = {Grenoble, France},
+	pages = {701--706},
+	numpages = {6},
+	acmid = {2755913},
+	publisher = {EDA Consortium},
+	address = {San Jose, CA, USA},
+} 
+
+@INPROCEEDINGS{Moons2017, 
+	author={B. {Moons} and R. {Uytterhoeven} and W. {Dehaene} and M. {Verhelst}}, 
+	booktitle={IEEE International Solid-State Circuits Conference (ISSCC)}, 
+	title={14.5 Envision: A 0.26-to-10TOPS/W subword-parallel dynamic-voltage-accuracy-frequency-scalable Convolutional Neural Network processor in 28nm FDSOI}, 
+	year={2017}, 
+	volume={}, 
+	number={}, 
+	pages={246-247}, 
+}
+
+@inproceedings{Gupta2015,
+	author = {Gupta, Suyog and Agrawal, Ankur and Gopalakrishnan, Kailash and Narayanan, Pritish},
+	title = {Deep Learning with Limited Numerical Precision},
+	booktitle = {Proceedings of the 32Nd International Conference on International Conference on Machine Learning},
+	year = {2015},
+	location = {Lille, France},
+	pages = {1737--1746},
+	numpages = {10}
+} 
+
+
+@inproceedings{Hashemi2017,
+	author = {Hashemi, Soheil and Anthony, Nicholas and Tann, Hokchhay and Bahar, R. Iris and Reda, Sherief},
+	title = {Understanding the Impact of Precision Quantization on the Accuracy and Energy of Neural Networks},
+	booktitle = {Proceedings of the Design, Automation Test in Europe Conference Exhibition (DATE)},
+	year = {2017},
+	pages = {1478--1483},
+	numpages = {6},
+}
+
+@inproceedings{Zhang2014,
+	author = {Zhang, Qian and Yuan, Feng and Ye, Rong and Xu, Qiang},
+	title = {ApproxIt: An Approximate Computing Framework for Iterative Methods},
+	booktitle = {Proceedings of the 51st Annual Design Automation Conference},
+	year = {2014},
+	pages = {97:1--97:6},
+	articleno = {97},
+	numpages = {6},
+} 
+
+@INPROCEEDINGS{Ye2013, 
+	author={R. {Ye} and T. {Wang} and F. {Yuan} and R. {Kumar} and Q. {Xu}}, 
+	booktitle={IEEE/ACM International Conference on Computer-Aided Design (ICCAD)}, 
+	title={On reconfiguration-oriented approximate adder design and its application}, 
+	year={2013}, 
+	volume={}, 
+	number={}, 
+	pages={48-54}, 
+}
+
+@INPROCEEDINGS{Esmaeilzadeh2012, 
+	author={H. {Esmaeilzadeh} and A. {Sampson} and L. {Ceze} and D. {Burger}}, 
+	booktitle={45th Annual IEEE/ACM International Symposium on Microarchitecture}, 
+	title={Neural Acceleration for General-Purpose Approximate Programs}, 
+	year={2012}, 
+	volume={}, 
+	number={}, 
+	pages={449-460}, 
+}
+
+@inproceedings{Venkataramani2012,
+	author = {Venkataramani, Swagath and Sabne, Amit and Kozhikkottu, Vivek and Roy, Kaushik and Raghunathan, Anand},
+	title = {SALSA: Systematic Logic Synthesis of Approximate Circuits},
+	booktitle = {Proceedings of the 49th Annual Design Automation Conference},
+	year = {2012},
+	isbn = {978-1-4503-1199-1},
+	pages = {796--801},
+	numpages = {6},
+} 
+
+@ARTICLE{Gupta2012, 
+	author={V. {Gupta} and D. {Mohapatra} and A. {Raghunathan} and K. {Roy}}, 
+	journal={IEEE Tran. on Computer-Aided Design of Integrated Circuits and Systems}, 
+	title={Low-Power Digital Signal Processing Using Approximate Adders}, 
+	year={2013}, 
+	volume={32}, 
+	number={1}, 
+	pages={124-137}, 
+}
+
+@inproceedings{Narayanan2014,
+	author = {Narayanan, Vijaykrishnan and Datta, Suman and Cauwenberghs, Gert and Chiarulli, Don and Levitan, Steve and Wong, Philip},
+	title = {Video Analytics Using Beyond CMOS Devices},
+	booktitle = {Design, Automation Test in Europe Conference Exhibition (DATE)},
+	year = {2014},
+	isbn = {978-3-9815370-2-4},
+	pages = {344:1--344:5},
+} 
+
+@article{Phelim2015,
+	author = {Bradley, Phelim and Gordon, N. Claire and Walker, Timothy M. and Dunn, Laura and Heys, Simon and Huang, Bill and Earle, Sarah and Pankhurst, Louise J. and Anson, Luke and de Cesare, Mariateresa and Piazza, Paolo and Votintseva, Antonina A. and Golubchik, Tanya and Wilson, Daniel J. and Wyllie, David H. and Diel, Roland and Niemann, Stefan and Feuerriegel, Silke and Kohl, Thomas A. and Ismail, Nazir and Omar, Shaheed V. and Smith, E. Grace and Buck, David and McVean, Gil and Walker, A. Sarah and Peto, Tim E. A. and Crook, Derrick W. and Iqbal, Zamin},
+	journal = {Nature Communications},
+	month = {dec},
+	number = {1},
+	pages = {10063},
+	title = {{Rapid antibiotic-resistance predictions from genome sequence data for Staphylococcus aureus and Mycobacterium tuberculosis}},
+	volume = {6},
+	year = {2015}
+}
+
+@article{McConnell2012,
+	year = 2012,
+	month = {feb},
+	publisher = {{IOP} Publishing},
+	volume = {341},
+	pages = {012018},
+	author = {Sabine McConnell and Robert Sturgeon and Gregory Henry and Andrew Mayne and Richard Hurley},
+	title = {Scalability of Self-organizing Maps on a {GPU} cluster using {OpenCL} and {CUDA}},
+	journal = {Journal of Physics: Conference Series},
+}
+
+
+@inbook{Porrmann2006,
+	Address = {Boston, MA},
+	Author = {Porrmann, Mario and Witkowski, Ulf and R{\"u}ckert, Ulrich},
+	Booktitle = {FPGA Implementations of Neural Networks},
+	Editor = {Omondi, Amos R. and Rajapakse, Jagath C.},
+	Pages = {247--269},
+	Publisher = {Springer US},
+	Title = {Implementation of Self-Organizing Feature Maps in Reconfigurable Hardware},
+	Ty = {CHAP},
+	Year = {2006}}
+
+@article{Kohonen2013,
+	author = {Kohonen, Teuvo},
+	title = {Essentials of the Self-organizing Map},
+	journal = {Neural Netw.},
+	issue_date = {January, 2013},
+	volume = {37},
+	month = jan,
+	year = {2013},
+	issn = {0893-6080},
+	pages = {52--65},
+	numpages = {14},
+	publisher = {Elsevier Science Ltd.},
+} 
+
+@article{Ansaloni2011EGRA:Template, title = {{EGRA: A coarse grained reconfigurable architectural template}}, year = {2011}, journal = {IEEE Transactions on Very Large Scale Integration (VLSI) Systems}, author = {Ansaloni, Giovanni and Bonzini, Paolo and Pozzi, Laura}, number = {6}, pages = {1062--1074}, volume = {19}, publisher = {IEEE} }
+
+@inproceedings{Hartenstein1995AArchitecture, title = {{A datapath synthesis system for the reconfigurable datapath architecture}}, year = {1995}, booktitle = {Design Automation Conference, 1995. Proceedings of the ASP-DAC'95/CHDL'95/VLSI'95., IFIP International Conference on Hardware Description Languages. IFIP International Conference on Very Large Scal}, author = {Hartenstein, Reiner W and Kress, Rainer}, pages = {479--484} }
+
+@inproceedings{Mei2003ADRES:Matrix, title = {{ADRES: An architecture with tightly coupled VLIW processor and coarse-grained reconfigurable matrix}}, year = {2003}, booktitle = {Inter. Conf. on Field Programmable Logic and App.}, author = {Mei, Bingfeng and Vernalde, Serge and Verkest, Diederik and De Man, Hugo and Lauwereins, Rudy}, pages = {61--70} }
+
+@article{Taylor2002ThePrograms, title = {{The raw microprocessor: A computational fabric for software circuits and general-purpose programs}}, year = {2002}, journal = {IEEE micro}, author = {Taylor, Michael Bedford and Kim, Jason and Miller, Jason and Wentzlaff, David and Ghodrat, Fae and Greenwald, Ben and Hoffman, Henry and Johnson, Paul and Lee, Jae-Wook and Lee, Walter and {others}}, number = {2}, pages = {25--35}, volume = {22}, publisher = {IEEE} }
+
+@inproceedings{Yang2018RiBoSOM, title = {{RiBoSOM}}, year = {2018}, booktitle = {Proceedings of the 18th International Conference on Embedded Computer Systems Architectures, Modeling, and Simulation - SAMOS}, author = {Yang, Yu and Stathis, Dimitrios and Sharma, Prashant and Paul, Kolin and Hemani, Ahmed and Grabherr, Manfred and Ahmad, Rafi}, pages = {105--114}, publisher = {ACM Press}, address = {New York, New York, USA}, isbn = {9781450364942}, doi = {10.1145/3229631.3229650}, keywords = {3D DRAM, GPU, neural networks, parallel architecture, self-organizing maps, silago, synchoros VLSI design} }
+
+@inproceedings{Hemani2017,
+	author = {Hemani, Ahmed and Jafri, Syed Mohammed Asad Hassan and Masoumian, Shayesteh},
+	booktitle = {Proceedings of the Eleventh IEEE/ACM International Symposium on Networks-on-Chip},
+	pages = {1--10},
+	title = {{Synchoricity and NOCs could make Billion Gate Custom Hardware Centric SOCs Affordable}},
+	year = {2017}
+}
+
+@INPROCEEDINGS{COG,
+	author={S. M. A. H. {Jafri} and N. {Farahini} and A. {Hemani}},
+	booktitle={IEEE Computer Society Annual Symposium on VLSI},
+	title={SiLago-CoG: Coarse-Grained Grid-Based Design for Near Tape-Out Power Estimation Accuracy at High Level},
+	year={2017},
+	volume={},
+	number={},
+	pages={25-31},
+}
+
+@phdthesis{shami2012dynamically,
+	title={Dynamically reconfigurable resource array},
+	author={Shami, Muhammad Ali},
+	year={2012},
+	school={KTH Royal Institute of Technology}
+}
+
+@inproceedings{li2013system,
+	title={System level synthesis of hardware for DSP applications using pre-characterized function implementations},
+	author={Li, Shuo and Farahini, Nasim and Hemani, Ahmed and Rosvall, Kathrin and Sander, Ingo},
+	booktitle={Proceedings of the Ninth IEEE/ACM/IFIP International Conference on Hardware/Software Codesign and System Synthesis},
+	pages={16},
+	year={2013},
+}
+@inproceedings{Pagliari2018,
+	address = {New York, New York, USA},
+	author = {Pagliari, Daniele Jahier and Macii, Enrico and Poncino, Massimo},
+	booktitle = {Proceedings of the International Symposium on Low Power Electronics and Design},
+	pages = {1--6},
+	publisher = {ACM Press},
+	title = {{Dynamic Bit-width Reconfiguration for Energy-Efficient Deep Learning Hardware}},
+	year = {2018}
+}
+@INPROCEEDINGS{8056820,
+	author={L. {Jiao} and C. {Luo} and W. {Cao} and X. {Zhou} and L. {Wang}},
+	booktitle={27th International Conference on Field Programmable Logic and Applications},
+	title={Accelerating low bit-width convolutional neural networks with embedded FPGA},
+	year={2017},
+	volume={},
+	number={},
+	pages={1-4},
+	month={Sep.}}
+
+@Article{3dstack,
+	author="Liu, Pei
+	and Hemani, Ahmed
+	and Paul, Kolin
+	and Weis, Christian
+	and Jung, Matthias
+	and Wehn, Norbert",
+	title="3D-Stacked Many-Core Architecture for Biological Sequence Analysis Problems",
+	journal="International Journal of Parallel Programming",
+	year="2017",
+	month="Dec",
+	day="01",
+	volume="45",
+	number="6",
+	pages="1420--1460"
+}
+@Article{fft,
+	author="Shami, Muhammad Ali
+	and Tajammul, Muhammad Adeel
+	and Hemani, Ahmed",
+	title="Configurable FFT Processor Using Dynamically Reconfigurable Resource Arrays",
+	journal="Journal of Signal Processing Systems",
+	year="2019",
+	month="May",
+	day="01",
+	volume="91",
+	number="5",
+	pages="459--473"
+}
+
+@INPROCEEDINGS{39watt,
+	author={N. {Farahini} and S. {Li} and M. A. {Tajammul} and M. A. {Shami} and G. {Chen} and A. {Hemani} and W. {Ye}},
+	booktitle={2013 IEEE International Symposium on Circuits and Systems (ISCAS2013)},
+	title={39.9 GOPs/watt multi-mode CGRA accelerator for a multi-standard basestation},
+	year={2013},
+	volume={},
+	number={},
+	pages={1448-1451},
+	month={May},}
+
+@INPROCEEDINGS{control,
+	author={M. A. {Shami} and A. {Hemani}},
+	booktitle={2010 22nd International Symposium on Computer Architecture and High Performance Computing},
+	title={Control Scheme for a CGRA},
+	year={2010},
+	volume={},
+	number={},
+	pages={17-24},
+	month={Oct},}
+
+
+@INPROCEEDINGS{AGU,
+	author={M. A. {Shami} and A. {Hemani}},
+	booktitle={ASAP 2011 - 22nd IEEE International Conference on Application-specific Systems, Architectures and Processors},
+	title={Address generation scheme for a coarse grain reconfigurable architecture},
+	year={2011},
+	volume={},
+	number={},
+	pages={17-24},
+	month={Sep.},}
+
+@INPROCEEDINGS{mocha,
+	author={S. M. A. H. {Jafri} and A. {Hemani} and K. {Paul} and N. {Abbas}},
+	booktitle={2017 IEEE International Parallel and Distributed Processing Symposium (IPDPS)},
+	title={MOCHA: Morphable Locality and Compression Aware Architecture for Convolutional Neural Networks},
+	year={2017},
+	volume={},
+	number={},
+	pages={276-286},
+	month={May},}
+
+
+@INPROCEEDINGS{dimarch,
+	author={M. {Adeel Tajammul} and M. A. {Shami} and A. {Hemani} and S. {Moorthi}},
+	booktitle={NORCHIP 2010},
+	title={A NoC based distributed memory architecture with programmable and partitionable capabilities},
+	year={2010},
+	volume={},
+	number={},
+	pages={1-6},
+	month={Nov},}
+
+@INPROCEEDINGS{dpu,
+	author="Shami, Muhammad Ali
+	and Hemani, Ahmed",
+	booktitle={2009 IEEE Workshop on Signal Processing Systems},
+	title={Morphable DPU: Smart and efficient data path for signal processing applications},
+	year={2009},
+	volume={},
+	number={},
+	pages={167-172},
+	month={Oct},}
+
+
+@INPROCEEDINGS{inteconnect,
+	author={M. A. {Shami} and A. {Hemani}},
+	booktitle={2009 IEEE 8th International Conference on ASIC},
+	title={Partially reconfigurable interconnection network for dynamically reprogrammable resource array},
+	year={2009},
+	volume={},
+	number={},
+	pages={122-125},
+	month={Oct},}
