--- a/synopsis/pub.tex
+++ b/synopsis/pub.tex
@@ -1,7 +1,7 @@
 \section*{List of Included Papers}
 This thesis is based on the following publications:
 
-\textbf{Published:}
+%\textbf{Published:}
 
 \newcounter{saveenum}
 
